eslint and prettier configured
