# helpers/requestHandler.helper.js
@@ -1,18 +1,23 @@
-const sendResponse = (res, status = false, statusCode = 200, statusMessage = 'Ok', data = null) => {
-    let resSchema = {
-        status,
-        statusCode,
-        statusMessage,
-    }
+const sendResponse = (
+  res,
+  status = false,
+  statusCode = 200,
+  statusMessage = "Ok",
+  data = null
+) => {
+  const resSchema = {
+    status,
+    statusCode,
+    statusMessage,
+  };
 
-    if(data != null){
-        resSchema.data = data;
-    }
+  if (data != null) {
+    resSchema.data = data;
+  }
 
-    return res.status(statusCode).json(resSchema);
-}
-
+  return res.status(statusCode).json(resSchema);
+};
 
 module.exports = {
-    sendResponse
-}
+  sendResponse,
+};
